# Photocurrent-from-It-graphs

./: README  README.md  pyproject.toml
Data/: Sample It data.xlsx  Test Data.xlsx
scripts/: run_manual_picker.py
src/Detector analysis/: metrics.py
src/detector_analysis/: __init__.py  cli.py  io.py  metrics.py  picker.py  plotting.py  utils.py
tests/: manual_ui_test_checklist  test_io.py  test_metrics.py  test_pipeline.py  test_utils.py
